# SmartDispenser_Lab1

./: .bunfig.toml  .env.example  .gitignore  Caddyfile  INTEGRATION_PLANNER.md  LICENSE  README.md  agents.md  biome.json  conftest.py  deploy.sh  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  ARCHITECTURE_AND_API.md  MIGRATION_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  seed_presentation.py  seed_users.py  smart_dispenser.db
backend/app/: __init__.py  main.py
backend/app/api/: api.py
backend/app/api/endpoints/: auth.py  (+8 more)
backend/app/core/: config.py  database.py  migrations.py  security.py
backend/app/crud/: command_queue.py  dispenser.py  log.py  medication.py  patient.py  patient_medication.py  schedule.py  user.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: dispenser.py  iot.py  log.py  medication.py  patient.py  schedule.py  slot.py  user.py
backend/app/services/: dispensation_log.py  dispenser_online.py  esp_proxy.py  notifier.py  patient_medication_sync.py  period_config.py  schedule_utils.py  scheduler.py  scheduler_clock.py  templates.py
backend/eco_dispenser_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_command_queue.py  test_dispenser_online.py  test_dispensers.py  test_forget_wifi.py  test_iot.py  test_logs.py  test_medications.py  test_patients.py  test_period_schedule.py  test_schedule_utils.py  test_scheduler.py  test_scheduler_clock.py  test_scheduler_flow.py  test_schedules.py  test_smtp.py  test_start_cycle.py
(+197 files in other folders)
